@@ -183,8 +183,14 @@ Arguments include
 .B \-\-all
 .\" FIXME: document
 .TP
+.B \-\-buildreqs
+Displays the troves that fulfilled the build requirements of the trove
+.TP
 .B \-\-deps
 .\" FIXME: document
+.TP
+.B \-\-flavors
+Displays flavors of the troves
 .TP
 .B \-\-full-versions
 .\" FIXME: document
